--- a/Automation/report.html
+++ b/Automation/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,338],[],[[5,0,0,[6],[1,304,2],[]],[7,0,0,[8],[1,308,3],[]],[9,0,0,[8],[1,317,3],[]],[10,0,0,[6],[1,323,3],[]],[11,0,0,[12],[1,331,4],[]]],[],[5,5,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,60327],[],[[4,0,0,[],[0,429,59891,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tags","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Tags.robot","*Tags.robot","*<p>Tags in Robot Framework\x3c/p>","*Test Case 1","*Smoke","*Test Case 2","*Regression","*Test Case 3","*Test Case 4","*Test Case 5","*Sanity"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Flipkart login","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Flipkart login.robot","*Flipkart%20login.robot","*LoginFlipkart","*Element with locator '<a href=\"xpath://input[@class='_2IX_2-\">xpath://input[@class='_2IX_2-\x3c/a> _3mctLh VJZDxU']' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":5,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"Regression","pass":2,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"Sanity","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"Smoke","pass":2,"skip":0}],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tags","name":"Tags","pass":5,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:01:00","fail":1,"id":"s1","label":"Flipkart login","name":"Flipkart login","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1672753128323;
+window.output["baseMillis"] = 1672768486335;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 365;
+window.output["generated"] = 60409;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
