--- a/Automation/log.html
+++ b/Automation/log.html
@@ -1799,31 +1799,31 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,338],[],[[5,0,0,[6],[1,304,2],[[0,7,8,0,9,10,0,0,[1,305,1],[]]]],[11,0,0,[12],[1,308,3],[[0,7,8,0,9,13,0,0,[1,309,0],[]]]],[14,0,0,[12],[1,317,3],[[0,7,8,0,9,15,0,0,[1,318,1],[]]]],[16,0,0,[6],[1,323,3],[[0,7,8,0,9,17,0,0,[1,324,1],[]]]],[18,0,0,[19],[1,331,4],[[0,7,8,0,9,20,0,0,[1,333,1],[]]]]],[],[5,5,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,60327],[],[[4,0,0,[],[0,429,59891,5],[[0,6,7,0,8,9,0,0,[1,429,49084],[[8,430,2,10]]],[0,11,12,0,13,14,0,0,[1,49514,10003],[[8,59516,2,15]]],[0,16,7,0,17,18,0,0,[1,59518,127],[[8,59519,2,19]]],[0,16,7,0,17,20,0,0,[1,59646,124],[[8,59646,2,21]]],[0,22,7,0,23,24,0,0,[1,59771,189],[[8,59771,2,25]]],[0,22,7,0,23,26,0,0,[0,59960,357],[[8,59961,2,27],[8,60228,2,28],[8,60317,5,5]]],[0,16,7,0,17,29,0,0,[3,60318,0],[]],[0,11,12,0,13,30,0,0,[3,60319,0],[]],[0,31,7,0,32,33,0,0,[3,60319,0],[]],[0,31,7,0,32,34,0,0,[3,60320,0],[]],[0,16,7,0,17,34,0,0,[3,60320,0],[]],[0,22,7,0,23,35,0,0,[3,60320,0],[]]]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tags","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Tags.robot","*Tags.robot","*<p>Tags in Robot Framework\x3c/p>","*Test Case 1","*Smoke","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*This is test case 1","*Test Case 2","*Regression","*This is test case 2","*Test Case 3","*This is test case 3","*Test Case 4","*This is test case 4","*Test Case 5","*Sanity","*This is test case 5"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Flipkart login","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Flipkart login.robot","*Flipkart%20login.robot","*LoginFlipkart","*Element with locator '<a href=\"xpath://input[@class='_2IX_2-\">xpath://input[@class='_2IX_2-\x3c/a> _3mctLh VJZDxU']' not found.","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${open browser}, chrome","*Opening browser 'chrome' to base url '<a href=\"https://www.flipkart.com/\">https://www.flipkart.com/\x3c/a>'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*10","*Slept 10 seconds","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${click}","*Clicking element 'xpath:/html/body/div[2]/div/div/button'.","*${click2}","*Clicking element '<a href=\"xpath://a[@class='_1_3w1N\">xpath://a[@class='_1_3w1N\x3c/a>']'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*<a href=\"xpath://input[@class='_2IX_2-\">xpath://input[@class='_2IX_2-\x3c/a> VJZDxU'], 8618581435","*Typing text '8618581435' into text field '<a href=\"xpath://input[@class='_2IX_2-\">xpath://input[@class='_2IX_2-\x3c/a> VJZDxU']'.","*<a href=\"xpath://input[@class='_2IX_2-\">xpath://input[@class='_2IX_2-\x3c/a> _3mctLh VJZDxU'], Flipkart@739","*Typing text 'Flipkart@739' into text field '<a href=\"xpath://input[@class='_2IX_2-\">xpath://input[@class='_2IX_2-\x3c/a> _3mctLh VJZDxU']'.","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-17.png\"><img src=\"selenium-screenshot-17.png\" width=\"800px\">\x3c/a>","*<a href=\"xpath://button[@class='_2KpZ6l\">xpath://button[@class='_2KpZ6l\x3c/a> _2HKlqd _3AWRsL']","*5sec","*Mouse Over","*<p>Simulates hovering the mouse over the element <code>locator\x3c/code>.\x3c/p>","*//*[contains(text(),'My Account')]","*<a href=\"xpath://*[contains(text(),'My\">xpath://*[contains(text(),'My\x3c/a> Profile')]","*<a href=\"xpath://input[@title='Search\">xpath://input[@title='Search\x3c/a> for products, brands and more'], puma x 1der vegas mens shoes"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":5,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"Regression","pass":2,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"Sanity","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"Smoke","pass":2,"skip":0}],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tags","name":"Tags","pass":5,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:01:00","fail":1,"id":"s1","label":"Flipkart login","name":"Flipkart login","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1672753128323;
+window.output["baseMillis"] = 1672768486335;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 365;
+window.output["generated"] = 60409;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"NONE","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
