--- a/Automation/report.html
+++ b/Automation/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,60327],[],[[4,0,0,[],[0,429,59891,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,57461],[],[[4,0,0,[],[1,323,57131],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Flipkart login","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Flipkart login.robot","*Flipkart%20login.robot","*LoginFlipkart","*Element with locator '<a href=\"xpath://input[@class='_2IX_2-\">xpath://input[@class='_2IX_2-\x3c/a> _3mctLh VJZDxU']' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Radio2","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\radio2.robot","*radio2.robot","*radio_check"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:01:00","fail":1,"id":"s1","label":"Flipkart login","name":"Flipkart login","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:57","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:57","fail":0,"id":"s1","label":"Radio2","name":"Radio2","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1672768486335;
+window.output["baseMillis"] = 1673000662425;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 60409;
+window.output["generated"] = 57511;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
