--- a/Automation/log.html
+++ b/Automation/log.html
@@ -1799,25 +1799,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,31394],[],[[4,0,0,[5],[1,471,30919],[[0,6,0,0,0,0,0,0,[1,473,30915],[[0,7,8,0,9,10,0,0,[1,474,6285],[[8,475,2,11]]],[0,12,8,0,13,0,0,0,[1,6759,132],[]],[0,14,8,0,15,0,16,0,[1,6891,2],[[8,6892,2,17]]],[0,18,19,0,20,16,0,0,[1,6893,1],[]],[0,21,8,0,22,23,0,0,[1,6894,0],[]],[0,24,19,0,25,26,27,0,[1,6895,0],[[8,6895,2,28]]],[0,29,8,0,30,27,0,0,[1,6895,6066],[]],[0,31,8,0,32,27,0,0,[1,12961,4062],[[8,17022,2,33]]],[0,34,8,0,35,36,0,0,[1,17023,6149],[[8,17023,2,37]]],[0,38,8,0,39,27,0,0,[1,23172,4038],[]],[0,40,8,0,41,0,0,0,[1,27210,4177],[]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,57265],[],[[4,0,0,[],[1,271,56991],[[0,5,0,0,0,0,0,0,[1,272,56988],[[0,6,7,0,8,9,0,0,[1,273,41029],[[8,273,2,10]]],[0,11,7,0,12,0,13,0,[1,41303,0],[[8,41303,2,14]]],[0,15,16,0,17,13,0,0,[1,41303,1],[]],[0,18,7,0,19,20,0,0,[1,41304,3],[]],[0,21,16,0,22,23,0,0,[1,41307,5008],[[8,46314,2,24]]],[0,25,7,0,26,0,0,0,[1,46315,140],[]],[0,21,16,0,22,23,0,0,[1,46456,5009],[[8,51465,2,24]]],[0,27,7,0,28,29,0,0,[1,51467,131],[[8,51468,2,30]]],[0,21,16,0,22,31,0,0,[1,51598,3005],[[8,54602,2,32]]],[0,33,7,0,34,35,0,0,[1,54603,89],[[8,54604,2,36]]],[0,33,7,0,34,37,0,0,[1,54692,111],[[8,54692,2,38]]],[0,39,7,0,40,41,0,0,[1,54803,132],[[8,54804,2,42]]],[0,11,7,0,12,0,0,0,[1,54935,1],[]],[0,15,16,0,17,13,0,0,[1,54936,1],[]],[0,43,7,0,44,0,0,0,[1,54937,2323],[]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Input boxes","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Input boxes.robot","*Input%20boxes.robot","*Input Box Verify","*demo","*inputtext1","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${browser}, chrome","*Opening browser 'chrome' to base url '<a href=\"https://www.facebook.com/\">https://www.facebook.com/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Get Selenium Speed","*<p>Gets the delay that is waited after each Selenium command.\x3c/p>","*${speed}","*${speed} = 0 seconds","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Set Selenium Speed","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*2","*Set Variable","*<p>Returns the given values which can then be assigned to a variables.\x3c/p>","*id:email","*${email}","*${email} = id:email","*Element Should Be Enabled","*<p>Verifies that element identified by <code>locator\x3c/code> is enabled.\x3c/p>","*Element Should Be Visible","*<p>Verifies that the element identified by <code>locator\x3c/code> is visible.\x3c/p>","*Element 'id:email' is displayed.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${email}, suhelk739 @gmail.com","*Typing text 'suhelk739 @gmail.com' into text field 'id:email'.","*Clear Element Text","*<p>Clears the value of the text-input-element identified by <code>locator\x3c/code>.\x3c/p>","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Radio botton","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Radio_botton.robot","*Radio_botton.robot","*RADIO","*Radio_select","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${Chrome}","eNqVzLENgDAMBdFVLJp0SY+AFZjBoB+ClODINmJ9WIH+3q0d13kdtKk8BqWwF5WGQC60sYFurRQmpqLI81Dcu40psbpkh/ln4y4tGbdeYacjixrqd73bsPzrp8RLiC+WADab","*Get Selenium Implicit Wait","*<p>Gets the implicit wait value used by Selenium.\x3c/p>","*${Implicit}","*${Implicit} = 0 seconds","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Set Selenium Implicit Wait","*<p>Sets the implicit wait value used by Selenium.\x3c/p>","*5","*Sleep","*<p>Pauses the test executed for the given time.\x3c/p>","*5sec","*Slept 5 seconds","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Select Radio Button","*<p>Sets the radio button group <code>group_name\x3c/code> to <code>value\x3c/code>.\x3c/p>","*gender, male","*Selecting 'male' from radio button 'gender'.","*3sec","*Slept 3 seconds","*Select Checkbox","*<p>Selects the checkbox identified by <code>locator\x3c/code>.\x3c/p>","*Automation","*Selecting checkbox 'Automation'.","*Performance","*Selecting checkbox 'Performance'.","*Select From List By Value","*<p>Selects options from selection list <code>locator\x3c/code> by <code>values\x3c/code>.\x3c/p>","*testingDropdown, Manual","*Selecting options from selection list 'testingDropdown' by value Manual.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:31","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:31","fail":0,"label":"demo","pass":1,"skip":0}],[{"elapsed":"00:00:31","fail":0,"id":"s1","label":"Input boxes","name":"Input boxes","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:57","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:57","fail":0,"id":"s1","label":"Radio botton","name":"Radio botton","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1673005863989;
+window.output["baseMillis"] = 1673006505595;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 31433;
+window.output["generated"] = 57410;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
