--- a/Automation/report.html
+++ b/Automation/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,31394],[],[[4,0,0,[5],[1,471,30919],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,57265],[],[[4,0,0,[],[1,271,56991],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Input boxes","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Input boxes.robot","*Input%20boxes.robot","*Input Box Verify","*demo"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Radio botton","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Radio_botton.robot","*Radio_botton.robot","*RADIO"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:31","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:31","fail":0,"label":"demo","pass":1,"skip":0}],[{"elapsed":"00:00:31","fail":0,"id":"s1","label":"Input boxes","name":"Input boxes","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:57","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:57","fail":0,"id":"s1","label":"Radio botton","name":"Radio botton","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1673005863989;
+window.output["baseMillis"] = 1673006505595;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 31433;
+window.output["generated"] = 57410;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
