--- a/Automation/log.html
+++ b/Automation/log.html
@@ -1799,25 +1799,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,57265],[],[[4,0,0,[],[1,271,56991],[[0,5,0,0,0,0,0,0,[1,272,56988],[[0,6,7,0,8,9,0,0,[1,273,41029],[[8,273,2,10]]],[0,11,7,0,12,0,13,0,[1,41303,0],[[8,41303,2,14]]],[0,15,16,0,17,13,0,0,[1,41303,1],[]],[0,18,7,0,19,20,0,0,[1,41304,3],[]],[0,21,16,0,22,23,0,0,[1,41307,5008],[[8,46314,2,24]]],[0,25,7,0,26,0,0,0,[1,46315,140],[]],[0,21,16,0,22,23,0,0,[1,46456,5009],[[8,51465,2,24]]],[0,27,7,0,28,29,0,0,[1,51467,131],[[8,51468,2,30]]],[0,21,16,0,22,31,0,0,[1,51598,3005],[[8,54602,2,32]]],[0,33,7,0,34,35,0,0,[1,54603,89],[[8,54604,2,36]]],[0,33,7,0,34,37,0,0,[1,54692,111],[[8,54692,2,38]]],[0,39,7,0,40,41,0,0,[1,54803,132],[[8,54804,2,42]]],[0,11,7,0,12,0,0,0,[1,54935,1],[]],[0,15,16,0,17,13,0,0,[1,54936,1],[]],[0,43,7,0,44,0,0,0,[1,54937,2323],[]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,44930],[],[[4,0,0,[],[1,407,44516],[[0,5,0,0,0,0,0,0,[1,408,44514],[[0,6,7,0,8,9,0,0,[1,408,12041],[[8,408,2,10]]],[0,11,7,0,12,13,0,0,[1,12449,1],[]],[0,14,7,0,15,0,0,0,[1,12450,2139],[]],[0,16,7,0,17,18,0,0,[1,14590,2016],[]],[0,19,7,0,20,18,0,0,[1,16606,4095],[[8,16606,2,21]]],[0,22,7,0,23,24,0,0,[1,20702,6036],[[8,20702,2,25]]],[0,19,7,0,20,18,0,0,[1,26738,4054],[[8,26738,2,21]]],[0,22,7,0,23,26,0,0,[1,30792,6040],[[8,30793,2,25]]],[0,19,7,0,20,18,0,0,[1,36833,4058],[[8,36833,2,21]]],[0,22,7,0,23,27,0,0,[1,40892,4029],[[8,40893,2,25]]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Radio botton","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Radio_botton.robot","*Radio_botton.robot","*RADIO","*Radio_select","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${Chrome}","eNqVzLENgDAMBdFVLJp0SY+AFZjBoB+ClODINmJ9WIH+3q0d13kdtKk8BqWwF5WGQC60sYFurRQmpqLI81Dcu40psbpkh/ln4y4tGbdeYacjixrqd73bsPzrp8RLiC+WADab","*Get Selenium Implicit Wait","*<p>Gets the implicit wait value used by Selenium.\x3c/p>","*${Implicit}","*${Implicit} = 0 seconds","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Set Selenium Implicit Wait","*<p>Sets the implicit wait value used by Selenium.\x3c/p>","*5","*Sleep","*<p>Pauses the test executed for the given time.\x3c/p>","*5sec","*Slept 5 seconds","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Select Radio Button","*<p>Sets the radio button group <code>group_name\x3c/code> to <code>value\x3c/code>.\x3c/p>","*gender, male","*Selecting 'male' from radio button 'gender'.","*3sec","*Slept 3 seconds","*Select Checkbox","*<p>Selects the checkbox identified by <code>locator\x3c/code>.\x3c/p>","*Automation","*Selecting checkbox 'Automation'.","*Performance","*Selecting checkbox 'Performance'.","*Select From List By Value","*<p>Selects options from selection list <code>locator\x3c/code> by <code>values\x3c/code>.\x3c/p>","*testingDropdown, Manual","*Selecting options from selection list 'testingDropdown' by value Manual.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Alert","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Alert.robot","*Alert.robot","*Alert11","*Alert1","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${Browser}, chrome","*Opening browser 'chrome' to base url '<a href=\"https://testautomationpractice.blogspot.com/\">https://testautomationpractice.blogspot.com/\x3c/a>'.","*Set Selenium Speed","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*2","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Wait Until Page Contains Element","*<p>Waits until the element <code>locator\x3c/code> appears on the current page.\x3c/p>","*<a href=\"xpath://button[@onclick='myFunction(\">xpath://button[@onclick='myFunction(\x3c/a>)']","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*Clicking element '<a href=\"xpath://button[@onclick='myFunction(\">xpath://button[@onclick='myFunction(\x3c/a>)']'.","*Handle Alert","*<p>Handles the current alert and returns its message.\x3c/p>","*accept","*HANDLE::&lt;class 'NoneType'&gt;::None","*dismiss","*leave"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:57","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:57","fail":0,"id":"s1","label":"Radio botton","name":"Radio botton","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:45","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:45","fail":0,"id":"s1","label":"Alert","name":"Alert","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1673006505595;
+window.output["baseMillis"] = 1673029305606;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 57410;
+window.output["generated"] = 44965;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
