--- a/Automation/report.html
+++ b/Automation/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,57265],[],[[4,0,0,[],[1,271,56991],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,44930],[],[[4,0,0,[],[1,407,44516],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Radio botton","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Radio_botton.robot","*Radio_botton.robot","*RADIO"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Alert","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Alert.robot","*Alert.robot","*Alert11"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:57","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:57","fail":0,"id":"s1","label":"Radio botton","name":"Radio botton","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:45","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:45","fail":0,"id":"s1","label":"Alert","name":"Alert","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1673006505595;
+window.output["baseMillis"] = 1673029305606;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 57410;
+window.output["generated"] = 44965;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
