--- a/Automation/log.html
+++ b/Automation/log.html
@@ -1799,25 +1799,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,44930],[],[[4,0,0,[],[1,407,44516],[[0,5,0,0,0,0,0,0,[1,408,44514],[[0,6,7,0,8,9,0,0,[1,408,12041],[[8,408,2,10]]],[0,11,7,0,12,13,0,0,[1,12449,1],[]],[0,14,7,0,15,0,0,0,[1,12450,2139],[]],[0,16,7,0,17,18,0,0,[1,14590,2016],[]],[0,19,7,0,20,18,0,0,[1,16606,4095],[[8,16606,2,21]]],[0,22,7,0,23,24,0,0,[1,20702,6036],[[8,20702,2,25]]],[0,19,7,0,20,18,0,0,[1,26738,4054],[[8,26738,2,21]]],[0,22,7,0,23,26,0,0,[1,30792,6040],[[8,30793,2,25]]],[0,19,7,0,20,18,0,0,[1,36833,4058],[[8,36833,2,21]]],[0,22,7,0,23,27,0,0,[1,40892,4029],[[8,40893,2,25]]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,48939],[],[[4,0,0,[],[1,300,48633],[[0,5,0,0,0,0,0,0,[1,301,48630],[[0,6,7,0,8,9,0,0,[1,301,11987],[[8,301,2,10]]],[0,11,7,0,12,0,13,0,[1,12288,1],[[8,12289,2,14]]],[0,15,16,0,17,13,0,0,[1,12289,1],[]],[0,18,7,0,19,20,0,0,[1,12290,1],[]],[0,21,7,0,22,0,0,0,[1,12292,2143],[]],[0,23,7,0,24,25,0,0,[1,14435,2025],[]],[0,26,7,0,27,25,0,0,[1,16460,4069],[[8,16460,2,28]]],[0,29,7,0,30,31,0,0,[1,20530,6049],[[8,20531,2,32]]],[0,26,7,0,27,25,0,0,[1,26579,4061],[[8,26580,2,28]]],[0,29,7,0,30,33,0,0,[1,30640,6035],[[8,30641,2,32]]],[0,26,7,0,27,25,0,0,[1,36676,4086],[[8,36676,2,28]]],[0,29,7,0,30,34,0,0,[1,40762,4012],[[8,40762,2,32]]],[0,11,7,0,12,0,35,0,[1,44774,1],[[8,44774,2,36]]],[0,15,16,0,17,35,0,0,[1,44776,1],[]],[0,37,7,0,38,0,0,0,[1,44777,4154],[]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Alert","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Alert.robot","*Alert.robot","*Alert11","*Alert1","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${Browser}, chrome","*Opening browser 'chrome' to base url '<a href=\"https://testautomationpractice.blogspot.com/\">https://testautomationpractice.blogspot.com/\x3c/a>'.","*Set Selenium Speed","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*2","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Wait Until Page Contains Element","*<p>Waits until the element <code>locator\x3c/code> appears on the current page.\x3c/p>","*<a href=\"xpath://button[@onclick='myFunction(\">xpath://button[@onclick='myFunction(\x3c/a>)']","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*Clicking element '<a href=\"xpath://button[@onclick='myFunction(\">xpath://button[@onclick='myFunction(\x3c/a>)']'.","*Handle Alert","*<p>Handles the current alert and returns its message.\x3c/p>","*accept","*HANDLE::&lt;class 'NoneType'&gt;::None","*dismiss","*leave"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Alert","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Alert.robot","*Alert.robot","*Alert11","*Alert1","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${Browser}, chrome","*Opening browser 'chrome' to base url '<a href=\"https://testautomationpractice.blogspot.com/\">https://testautomationpractice.blogspot.com/\x3c/a>'.","*Get Selenium Speed","*<p>Gets the delay that is waited after each Selenium command.\x3c/p>","*${Speed}","*${Speed} = 0 seconds","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Set Selenium Speed","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*2","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Wait Until Page Contains Element","*<p>Waits until the element <code>locator\x3c/code> appears on the current page.\x3c/p>","*${alert_button}","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*Clicking element '<a href=\"xpath://button[@onclick='myFunction(\">xpath://button[@onclick='myFunction(\x3c/a>)']'.","*Handle Alert","*<p>Handles the current alert and returns its message.\x3c/p>","*accept","*HANDLE::&lt;class 'NoneType'&gt;::None","*dismiss","*leave","*${speed1}","*${speed1} = 2 seconds","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:45","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:45","fail":0,"id":"s1","label":"Alert","name":"Alert","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:49","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:49","fail":0,"id":"s1","label":"Alert","name":"Alert","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1673029305606;
+window.output["baseMillis"] = 1673030266132;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 44965;
+window.output["generated"] = 49016;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
