--- a/Automation/log.html
+++ b/Automation/log.html
@@ -1799,25 +1799,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,55694],[],[[4,0,0,[],[1,403,55283],[[0,5,0,0,0,0,0,0,[1,404,55280],[[0,6,7,0,8,9,0,0,[1,404,12495],[[8,405,2,10]]],[0,11,7,0,12,0,13,0,[1,12900,1],[[8,12901,2,14]]],[0,15,16,0,17,13,0,0,[1,12902,1],[]],[0,18,7,0,19,20,0,0,[1,12905,0],[]],[0,21,7,0,22,0,0,0,[1,12906,2180],[]],[0,23,7,0,24,25,0,0,[1,15086,2034],[]],[0,26,7,0,27,25,0,0,[1,17121,4116],[[8,17121,2,28]]],[0,29,7,0,30,31,0,0,[1,21237,6039],[[8,21238,2,32]]],[0,26,7,0,27,25,0,0,[1,27276,4085],[[8,27276,2,28]]],[0,29,7,0,30,33,0,0,[1,31361,6042],[[8,31362,2,32]]],[0,26,7,0,27,25,0,0,[1,37404,4079],[[8,37406,2,28]]],[0,29,7,0,30,34,0,0,[1,41484,4023],[[8,41485,2,32]]],[0,35,7,0,36,37,0,0,[1,45508,6032],[[8,45509,2,32]]],[0,11,7,0,12,0,38,0,[1,51540,1],[[8,51541,2,39]]],[0,15,16,0,17,38,0,0,[1,51541,2],[]],[0,40,7,0,41,0,0,0,[1,51543,4141],[]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,49859],[],[[4,0,0,[],[1,361,49491],[[0,5,0,0,0,0,0,0,[1,361,49491],[[0,6,7,0,8,9,0,0,[1,361,0],[]],[0,10,7,0,11,0,12,0,[1,361,0],[[8,361,2,13]]],[0,14,15,0,16,12,0,0,[1,361,0],[]],[0,17,7,0,18,19,0,0,[1,361,10886],[[8,361,2,20]]],[0,21,7,0,22,0,0,0,[1,11247,2144],[]],[0,23,7,0,24,25,0,0,[1,13391,10174],[[8,13391,2,26]]],[0,27,7,0,28,29,0,0,[1,23565,6026],[[8,23565,2,30]]],[0,23,7,0,24,25,0,0,[1,29591,10147],[[8,29591,2,26]]],[0,27,7,0,28,31,0,0,[1,39738,6012],[[8,39738,2,30]]],[0,32,7,0,33,0,0,0,[1,45750,4102],[]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Alert","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Alert.robot","*Alert.robot","*Alert11","*Alert1","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${Browser}, chrome","*Opening browser 'chrome' to base url '<a href=\"https://testautomationpractice.blogspot.com/\">https://testautomationpractice.blogspot.com/\x3c/a>'.","*Get Selenium Speed","*<p>Gets the delay that is waited after each Selenium command.\x3c/p>","*${Speed}","*${Speed} = 0 seconds","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Set Selenium Speed","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*2","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Wait Until Page Contains Element","*<p>Waits until the element <code>locator\x3c/code> appears on the current page.\x3c/p>","*${alert_button}","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*Clicking element '<a href=\"xpath://button[@onclick='myFunction(\">xpath://button[@onclick='myFunction(\x3c/a>)']'.","*Handle Alert","*<p>Handles the current alert and returns its message.\x3c/p>","*accept","*HANDLE::&lt;class 'NoneType'&gt;::None","*dismiss","*leave","*Alert Should Be Present","*<p>Verifies that an alert is present and by default, accepts it.\x3c/p>","*Press a button!","*${speed1}","*${speed1} = 2 seconds","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Alert 1","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Alert_1.robot","*Alert_1.robot","*Alert_1","*Alert","*Set Selenium Speed","*SeleniumLibrary","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*2","*Get Selenium Speed","*<p>Gets the delay that is waited after each Selenium command.\x3c/p>","*${speed_check}","*${speed_check} = 2 seconds","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${Browser_Chrome}, chrome","*Opening browser 'chrome' to base url '<a href=\"https://testautomationpractice.blogspot.com/\">https://testautomationpractice.blogspot.com/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*${Alert_button}","*Clicking button '//*[@id=\"HTML9\"]/div[1]/button'.","*Handle Alert","*<p>Handles the current alert and returns its message.\x3c/p>","*accept","*HANDLE::&lt;class 'NoneType'&gt;::None","*dismiss","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:55","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:56","fail":0,"id":"s1","label":"Alert","name":"Alert","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:49","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:50","fail":0,"id":"s1","label":"Alert 1","name":"Alert 1","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1673030549097;
+window.output["baseMillis"] = 1679158307270;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 55840;
+window.output["generated"] = 49916;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
