--- a/Automation/results/log.html
+++ b/Automation/results/log.html
@@ -1799,25 +1799,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,449],[],[[5,0,0,[6],[1,438,3],[[0,7,8,0,9,10,0,0,[1,439,1],[]]]],[11,0,0,[6],[1,443,3],[[0,7,8,0,9,12,0,0,[1,444,1],[]]]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,320],[],[[5,0,0,[6],[1,312,0],[[0,7,8,0,9,10,0,0,[1,312,0],[]]]],[11,0,0,[12],[1,312,8],[[0,7,8,0,9,13,0,0,[1,320,0],[]]]],[14,0,0,[12],[1,320,0],[[0,7,8,0,9,15,0,0,[1,320,0],[]]]],[16,0,0,[6],[1,320,0],[[0,7,8,0,9,17,0,0,[1,320,0],[]]]]],[],[4,4,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tags","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Tags.robot","*../Tags.robot","*<p>Tags in Robot Framework\x3c/p>","*Test Case 1","*Smoke","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*This is test case 1","*Test Case 4","*This is test case 4"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tags","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\tags.robot","*../tags.robot","*<p>Tags in Robot Framework\x3c/p>","*Test Case 1","*Smoke","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*This is test case 1","*Test Case 2","*Regression","*This is test case 2","*Test Case 3","*This is test case 3","*Test Case 4","*This is test case 4"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"Smoke","pass":2,"skip":0}],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tags","name":"Tags","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":4,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"Regression","pass":2,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"Smoke","pass":2,"skip":0}],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tags","name":"Tags","pass":4,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1672752960033;
+window.output["baseMillis"] = 1679159176567;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 482;
+window.output["generated"] = 347;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
