--- a/Automation/log.html
+++ b/Automation/log.html
@@ -1799,25 +1799,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,49859],[],[[4,0,0,[],[1,361,49491],[[0,5,0,0,0,0,0,0,[1,361,49491],[[0,6,7,0,8,9,0,0,[1,361,0],[]],[0,10,7,0,11,0,12,0,[1,361,0],[[8,361,2,13]]],[0,14,15,0,16,12,0,0,[1,361,0],[]],[0,17,7,0,18,19,0,0,[1,361,10886],[[8,361,2,20]]],[0,21,7,0,22,0,0,0,[1,11247,2144],[]],[0,23,7,0,24,25,0,0,[1,13391,10174],[[8,13391,2,26]]],[0,27,7,0,28,29,0,0,[1,23565,6026],[[8,23565,2,30]]],[0,23,7,0,24,25,0,0,[1,29591,10147],[[8,29591,2,26]]],[0,27,7,0,28,31,0,0,[1,39738,6012],[[8,39738,2,30]]],[0,32,7,0,33,0,0,0,[1,45750,4102],[]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,20257],[],[[4,0,0,[],[1,892,19341],[[0,5,0,0,0,0,0,0,[1,902,19328],[[0,6,7,0,8,9,0,0,[1,902,0],[]],[0,10,7,0,11,12,0,0,[1,902,7670],[[8,902,2,13]]],[0,14,7,0,15,0,0,0,[1,8572,2183],[]],[0,16,7,0,17,18,0,0,[1,10756,2556],[[8,10757,2,19]]],[0,20,7,0,21,0,0,0,[1,13312,2665],[]],[0,22,7,0,23,0,0,0,[1,15977,4252],[]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Alert 1","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Alert_1.robot","*Alert_1.robot","*Alert_1","*Alert","*Set Selenium Speed","*SeleniumLibrary","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*2","*Get Selenium Speed","*<p>Gets the delay that is waited after each Selenium command.\x3c/p>","*${speed_check}","*${speed_check} = 2 seconds","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${Browser_Chrome}, chrome","*Opening browser 'chrome' to base url '<a href=\"https://testautomationpractice.blogspot.com/\">https://testautomationpractice.blogspot.com/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*${Alert_button}","*Clicking button '//*[@id=\"HTML9\"]/div[1]/button'.","*Handle Alert","*<p>Handles the current alert and returns its message.\x3c/p>","*accept","*HANDLE::&lt;class 'NoneType'&gt;::None","*dismiss","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Goto","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Goto.robot","*Goto.robot","*Goto1","*Goto11","*Set Selenium Speed","*SeleniumLibrary","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*2","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${google}, ${driver}","*Opening browser 'chrome' to base url '<a href=\"https://www.google.com/\">https://www.google.com/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*${bing}","*Opening url '<a href=\"https://www.bing.com/\">https://www.bing.com/\x3c/a>'","*Go Back","*<p>Simulates the user clicking the back button on their browser.\x3c/p>","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:49","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:50","fail":0,"id":"s1","label":"Alert 1","name":"Alert 1","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:19","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:20","fail":0,"id":"s1","label":"Goto","name":"Goto","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1679158307270;
+window.output["baseMillis"] = 1679160339668;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 49916;
+window.output["generated"] = 20322;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
