--- a/Automation/report.html
+++ b/Automation/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,49859],[],[[4,0,0,[],[1,361,49491],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,20257],[],[[4,0,0,[],[1,892,19341],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Alert 1","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Alert_1.robot","*Alert_1.robot","*Alert_1"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Goto","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Goto.robot","*Goto.robot","*Goto1"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:49","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:50","fail":0,"id":"s1","label":"Alert 1","name":"Alert 1","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:19","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:20","fail":0,"id":"s1","label":"Goto","name":"Goto","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1679158307270;
+window.output["baseMillis"] = 1679160339668;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 49916;
+window.output["generated"] = 20322;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
