--- a/Automation/report.html
+++ b/Automation/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,27298],[],[[4,0,0,[],[1,343,26946],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,302],[],[[5,0,0,[6,7],[1,297,3],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Call From Resource","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\call from resource.robot","*call%20from%20resource.robot","*call_from_resources"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tags","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Tags.robot","*Tags.robot","*<p>Tags in Robot Framework\x3c/p>","*Test Case 3","*for","*Regression"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:27","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:27","fail":0,"id":"s1","label":"Call From Resource","name":"Call From Resource","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"for","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"Regression","pass":1,"skip":0}],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tags","name":"Tags","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1682791212528;
+window.output["baseMillis"] = 1682976731430;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 27358;
+window.output["generated"] = 329;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
