--- a/Automation/log.html
+++ b/Automation/log.html
@@ -1799,31 +1799,31 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,51626],[],[[5,0,6,[],[1,431,51191],[[0,7,8,0,9,10,0,0,[1,432,0],[]],[0,11,12,0,0,13,0,0,[1,432,9362],[[0,14,8,0,15,16,0,0,[1,433,7192],[[8,433,2,17]]],[0,18,8,0,19,0,0,0,[1,7625,2168],[]]]],[0,20,8,0,21,22,0,0,[1,9795,6332],[[8,9797,2,23]]],[0,24,8,0,25,26,0,0,[1,16128,10162],[[8,16128,2,27]]],[0,28,29,0,30,10,0,0,[1,26292,2008],[[8,28300,2,31]]],[0,32,8,0,33,34,0,0,[1,28300,2058],[[8,28302,2,35]]],[0,28,29,0,30,10,0,0,[1,30360,2003],[[8,32362,2,31]]],[0,36,8,0,37,38,0,0,[1,32364,4394],[[8,32364,2,39]]],[0,40,8,0,41,42,0,0,[1,36759,2361],[[8,39119,2,43]]],[0,28,29,0,30,10,0,0,[1,39122,2006],[[8,41128,2,31]]],[0,44,8,0,45,46,0,0,[1,41129,4306],[[8,41129,2,47]]],[0,28,29,0,30,10,0,0,[1,45438,2010],[[8,47448,2,31]]],[0,48,0,0,0,0,0,0,[1,47449,2032],[[0,7,8,0,9,10,0,0,[1,47450,1],[]],[0,49,8,0,50,0,51,0,[1,47451,2028],[[8,49479,2,52]]],[0,53,29,0,54,51,0,0,[1,49479,1],[[8,49480,2,55]]]]],[0,56,0,0,0,0,0,0,[1,49482,2140],[[0,7,8,0,9,10,0,0,[1,49483,0],[]],[0,57,8,0,58,0,59,0,[1,49484,2050],[[8,51534,2,60]]],[0,61,29,0,62,59,0,0,[1,51535,85],[]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,2100],[[4,5,6,0,[],[0,185,1818],[],[[7,0,0,[],[0,1991,11,8],[[0,9,0,0,0,0,0,0,[0,1993,8],[[0,10,0,0,0,0,0,0,[0,1999,1],[[8,1999,5,8]]]]]]]],[],[1,0,1,0]],[11,12,13,0,[],[0,2008,89],[],[[14,0,0,[],[0,2087,9,15],[[0,9,0,0,0,0,0,0,[0,2095,0],[[8,2095,5,15]]]]]],[],[1,0,1,0]]],[],[],[2,0,2,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Fetch resource data","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\Fetch_resource_data.robot","*Fetch_resource_data.robot","*<p>This is resouce file\x3c/p>","*give_values","*<p>This is giving values in the field\x3c/p>","*Set Selenium Speed","*SeleniumLibrary","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*2","*Open_the_Browser","*Open browser and close browser","eNqVysENwCAIAMBVjO+m/BvrLsRgJRExQPfvDL33FUzDqN95RGy/ANBCe5AHr+dsKuAoe5JzUFdzmrT4lVz//QJYj9SGqdAH1tUruA==","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url}, ${browser}","eNqVzLENgDAMBdFVLJp0SY+AFZjBoB+ClODINmJ9WIH+3q0d13kdtKk8BqWwF5WGQC60sYFurRQmpqLI81Dcu40psbpkh/ln4y4tGbdeYacjixrqd73bsPzrp8RLiC+WADab","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id:fname, Suhel Khan","*Typing text 'Suhel Khan' into text field 'id:fname'.","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*id:idOfButton","*Clicking button 'id:idOfButton'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*Slept 2 seconds","*Execute Javascript","*<p>Executes the given JavaScript code with possible arguments.\x3c/p>","*window.scrollTo(0,2000)","*Executing JavaScript:\nwindow.scrollTo(0,2000)\nWithout any arguments.","*Mouse Down","*<p>Simulates pressing the left mouse button on the element <code>locator\x3c/code>.\x3c/p>","*css=#myImage","*Simulating Mouse Down on element 'css=#myImage'.","*Capture Page Screenshot","*<p>Takes a screenshot of the current page and embeds it into a log file.\x3c/p>","*C:/Users/suhelk/PycharmProjects/Automation/Automation/snapshots/drag.png","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"snapshots/drag.png\"><img src=\"snapshots/drag.png\" width=\"800px\">\x3c/a>","*Mouse Up","*<p>Simulates releasing the left mouse button on the element <code>locator\x3c/code>.\x3c/p>","*css=#targetDiv","*Simulating Mouse Up on element 'css=#targetDiv'.","*fetch_loc","*Get Location","*<p>Returns the current browser window URL.\x3c/p>","*${loc}","*${loc} = <a href=\"https://artoftesting.com/samplesiteforselenium\">https://artoftesting.com/samplesiteforselenium\x3c/a>","*Log","*<p>Logs the given message with the given level.\x3c/p>","eNqzSVTIKEpNs1XKKCkpKLbS108sKslPK0ktLsnMS9dLzs/VL07MLchJLc4sSU3LLypOzUnNyyzNVbIjTb2NfqIdAIRoKO4=","*fetch_source","*Get Source","*<p>Returns the entire HTML source of the current page or frame.\x3c/p>","*${source}","eNpdzUEKgzAQBdCrhFDcdUKhq0pOUbouIQ4aiUnITFql9O4VRQvuhv8/804fiiVb/AotKs91x4MX3oRWSwznx11WLddLgabZbrLZJRau0ZLfjm0sgZ/Jl9YFkoKy1bJjTnRTitiwsxfYd2DjoHpS/6CnHVHr54PDU8JZwpFVb15mTaUwNIVZOoJLC9cGR3BR+WiNJ44ZNwcAftURVuc=","*Log To Console","*<p>Logs the given message to the console.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*user defained keywords with Python","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\user defained keywords with Python","*user%20defained%20keywords%20with%20Python","*Resource Py","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\user defained keywords with Python\\resource_py.robot","*user%20defained%20keywords%20with%20Python/resource_py.robot","*fplder","*No keyword with name 'crete_folder' found.","*folder_create","*crete_folder","*User Defined Keywords","*C:\\Users\\suhelk\\PycharmProjects\\Automation\\Automation\\user defained keywords with Python\\user_defined_keywords.robot","*user%20defained%20keywords%20with%20Python/user_defined_keywords.robot","*folder","*No keyword with name 'folder_create' found.","eNqVjLEOwyAMBX/FGxtLt2xV1T1DuyFVBBxBQ3BkG6X8fRm7dnsn3b07MzHkCmsuCOY2uacgi5OWsGxu7iF53memNwYVd21Ku9dM9Xe2kUDE1eeKETbsJ3EUOLMmmLumoTAKNQ74OrplWkgNUIUyArhM8EDRAQt77mCs/fM8MHpFWKlEZHt0A5FQoJICfrKo/QJZCFaB","eNqVjj8LwjAQxb/Kbd2yuHUTcS+CW6DU5kpi05zcXaj59kZIwdXtwfu9P1dmYggJlhARuktv74IsVrLHuNqhzH7ibWB64qxiz1lpmzRQ+pW5RsDhMoWEDlYsO7ET2IN6GIr6howV+RLjQRimB2kHlCBWA0493FAo84ztjzF/7nDLj69ytDtCgUQK+A6i5gPE6lvF"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:51","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:52","fail":0,"id":"s1","label":"Fetch resource data","name":"Fetch resource data","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":2,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:02","fail":2,"id":"s1","label":"user defained keywords with Python","name":"user defained keywords with Python","pass":0,"skip":0},{"elapsed":"00:00:02","fail":1,"id":"s1-s1","label":"user defained keywords with Python.Resource Py","name":"Resource Py","pass":0,"skip":0},{"elapsed":"00:00:00","fail":1,"id":"s1-s2","label":"user defained keywords with Python.User Defined Keywords","name":"User Defined Keywords","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["errors"] = [];
+window.output["errors"] = [[8,1989,4,16],[8,2017,4,17]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1683747379859;
+window.output["baseMillis"] = 1693048375210;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 51690;
+window.output["generated"] = 2147;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"FAIL","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
